--- a/projects/css-zen-garden/index.html
+++ b/projects/css-zen-garden/index.html
@@ -53,8 +53,10 @@
 
 	<section class="intro" id="zen-intro">
 		<header role="banner">
-			<h1>CSS Zen Garden</h1>
-			<h2>The Beauty of <abbr title="Cascading Style Sheets">CSS</abbr> Design</h2>
+			<div id="top">
+				<h1>CSS Zen Garden</h1>
+				<h2>The Beauty of <abbr title="Cascading Style Sheets">CSS</abbr> Design</h2>
+			</div>
 		</header>
 
 		<div class="summary" id="zen-summary" role="article">
