input now only allows numbers

--- a/projects/mario-pest-control/index.html
+++ b/projects/mario-pest-control/index.html
@@ -17,19 +17,19 @@
             <li class="baddies">
                 <h2>Goombas</h2>
                 <img id="goomba" src="images/goomba.png" alt="Goomba">
-                <p>Total Caught: <input type="text" id="goombaInput"></p><br>
+                <p>Total Caught: <input type="number" id="goombaInput"></p><br>
                 <p>Total Price: <br><span id="goombaTotal"></span></p>
             </li>
             <li class="baddies">
                 <h2>Bob-ombs</h2>
                 <img src="images/bob-omb.png" alt="Bob-omb">
-                <p>Total Caught: <input id="bobombInput" type="text"></p><br>
+                <p>Total Caught: <input id="bobombInput" type="number"></p><br>
                 <p>Total Price: <br><span id="bobombTotal"></span></p>
             </li>
             <li class="baddies">
                 <h2>Cheep-cheeps</h2>
                 <img src="images/cheep-cheep.png" alt="Cheep-cheep">
-                <p>Total Caught: <input id="cheepInput" type="text"></p><br>
+                <p>Total Caught: <input id="cheepInput" type="number"></p><br>
                 <p>Total Price: <br><span id="cheepTotal"></span></p>
             </li>
         </ul>
