--- a/exercises/luigi/index.html
+++ b/exercises/luigi/index.html
@@ -4,15 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 <body>
-    <div class="row">
-        <div class="col-sm-12 rows"></div>
-        <div class="col-sm-12 rows"></div>
-        <div class="col-sm-12 rows"></div>
-        <div class="col-sm-12 rows"></div>
+    <div class="container-fluid">
+        <div class="row rows" id="row-1">
+            <div class="col-xs-12 col-xs-offset-1"id="header">
+                <h1>Luigi</h1>
+            </div>
+        </div>
+        <div class="row rows" id="row-2">
+            <div class="col-xs-12">
+                <img src="images/luigi.png" alt="Luigi">
+            </div>
+        </div>
+        <div class="row rows" id="row-3">
+            <div class="col-xs-12 rows">
+                <h2>ABOUT ME</h2>
+                <h3>My name is Luigi. I'm a <br>second rate kind of hero <br>no one takes me seriously <br>but that is ok I guess.</h3>
+            </div>
+        </div>
+        <div class="row rows" id="row-4">
+            <div class="col-xs-12">
+                <img src="images/greenmushroom.png" alt="Mushroom" id="mushroom">
+            </div>
+        </div> 
+        </div>
     </div>
 </body>
 </html>
