--- a/exercises/bootstrap-navbar/index.html
+++ b/exercises/bootstrap-navbar/index.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" rel="stylesheet">    
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>The Instrument Shoppe</title>
 </head>
 <body>
-        <nav class="navbar navbar-default">
+        <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container-fluid">
               <!-- Brand and toggle get grouped for better mobile display -->
               <div class="navbar-header">
@@ -43,7 +43,7 @@
                     </ul>
                   </li>
                 </ul>
-                <form class="navbar-form navbar-left">
+                <form class="navbar-form navbar-right">
                   <div class="form-group">
                     <input type="text" class="form-control" placeholder="Search">
                   </div>
