Created a new CSS Zen using CSS Grid

--- a/projects/css-zen-garden/newIndex.html
+++ b/projects/css-zen-garden/newIndex.html
@@ -18,8 +18,8 @@
                     <div class="col-lg-8 col-md-8 col-sm-12" id="div-custom">
                         <h1>CSS ZEN GARDEN</h1>
                         <h2>The Beauty of <u class="dotted">CSS</u> Design</h2>
-                    </div>
-                    <div class="col-lg-4 col-md-4 col-sm-12 side"><a href="http://www.mezzoblue.com/zengarden/alldesigns/">VIEW ALL DESIGNS</a></div>
+                    </div>http://www.mezzoblue.com/zengarden/alldesigns/
+                    <div class="col-lg-4 col-md-4 col-sm-12 side"><a href="">VIEW ALL DESIGNS</a></div>
                 </div>
             </div>
             <div class="row">
