--- a/projects/css-zen-garden/index.html
+++ b/projects/css-zen-garden/index.html
@@ -31,23 +31,46 @@
                 <p>CSS allows complete and total control over the style of a hypertext document. The only way this can be illustrated in a way that gets people excited is by demonstrating what it can truly be, once the reins are placed in the hands of those able to create beauty from structure. Designers and coders alike have contributed to the beauty of the web; we can always push it further.</p>
             </div>
             <div class="designs">
+                <ul>
+                    <li id="li-one"><a href="www.csszengarden/221/" target="_blank" class="design-name">MID CENTURY MODERN</a><br> <i>by</i> <a href="http://andrewlohman.com/" class="designer-name" target="_blank" class="designer-name">Andrew Lohman</a></li>
+                    <div class="divider"></div>
+                    <li id="li-two"><a href="www.csszengarden/220/" target="_blank" class="design-name">GARMENTS</a><br> <i>by</i> <a href="http://danielmall.com/" class="designer-name" target="_blank" class="designer-name">Dan Mall</a></li>
+                    <div class="divider"></div>
+                    <li id="li-three"><a href="www.csszengarden/219/" target="_blank" class="design-name">STEEL</a><br> <i>by</i> <a href="http://steffen-knoeller.de" class="designer-name" target="_blank" class="designer-name">Steffen Knoeller</a></li>
+                    <div class="divider"></div>
+                    <li id="li-four"><a href="www.csszengarden/218/" target="_blank" class="design-name">APOTHECARY</a><br> <i>by</i> <a href="http://trentwalton.com" class="designer-name" target="_blank" class="designer-name">Trent Walton</a></li>
+                    <div class="divider"></div>
+                    <li id="li-five"><a href="www.csszengarden/217/" target="_blank" class="design-name">SCREEN FILLER</a><br> <i>by</i> <a href="http://elliotjaystocks.com/" class="designer-name" target="_blank" class="designer-name">Elliot Jay Stocks</a></li>
+                    <div class="divider"></div>
+                    <li id="li-six"><a href="www.csszengarden/216/" target="_blank" class="design-name">FOUNTAIN KISS</a><br> <i>by</i> <a href="http://jeremycarlson.com" class="designer-name" target="_blank" class="designer-name">Jeremy Carlson</a></li>
+                    <div class="divider"></div>
+                    <li id="li-seven"><a href="www.csszengarden/215/" target="_blank" class="design-name">A ROBOT NAMED JIMMY</a><br> <i>by</i> <a href="http://meltmedia.com/" class="designer-name" target="_blank" class="designer-name">meltmedia</a></li>
+                    <div class="divider"></div>
+                    <li id="last-li"><a href="www.csszengarden/214/" target="_blank" class="design-name">VERDE MODERNA</a><br> <i>by</i> <a href="http://www.mezzoblue.com/" class="designer-name" target="_blank" class="designer-name">Dave Shea</a></li>
+                </ul>
             </div>
             <div class="participation">
                 <h3>PARTICIPATION</h3>
-                <p>Strong visual design has always been our focus. You are modifying this page, so strong CSS skills are necessary too, but the example files are commented well enough that even CSS novices can use them as starting points. Please see the CSS Resource Guide for advanced tutorials and tips on working with CSS.</p>
-                <p>You may modify the style sheet in any way you wish, but not the HTML. This may seem daunting at first if you’ve never worked this way before, but follow the listed links to learn more, and use the sample files as a guide.</p>
-                <p>Download the sample HTML and CSS to work on a copy locally. Once you have completed your masterpiece (and please, don’t submit half-finished work) upload your CSS file to a web server under your control. Send us a link to an archive of that file and all associated assets, and if we choose to use it we will download it and place it on our server.</p>
+                <p>Strong visual design has always been our focus. You are modifying this page, so strong CSS skills are necessary too, but the example files are commented well enough that even CSS novices can use them as starting points. Please see the CSS Resource Guide for advanced tutorials and tips on working with CSS.</p><br>
+                <p>You may modify the style sheet in any way you wish, but not the HTML. This may seem daunting at first if you’ve never worked this way before, but follow the listed links to learn more, and use the sample files as a guide.</p><br>
+                <p>Download the sample HTML and CSS to work on a copy locally. Once you have completed your masterpiece (and please, don’t submit half-finished work) upload your CSS file to a web server under your control. Send us a link to an archive of that file and all associated assets, and if we choose to use it we will download it and place it on our server.</p><br>
                 <h3>BENEFITS</h3>
                 <p>Why participate? For recognition, inspiration, and a resource we can all refer to showing people how amazing CSS really can be. This site serves as equal parts inspiration for those working on the web today, learning tool for those who will be tomorrow, and gallery of future techniques we can all look forward to.</p>
             </div>
             <div class="resources">
-                
+                <ul>
+                    <li id="first-li"><a href="http://www.csszengarden.com/214/214.css" target="_blank">VIEW THIS DESIGN'S CSS</a></li>
+                    <li id="two"><a href="http://www.mezzoblue.com/zengarden/resources/" target="_blank">CSS RESOURCES</a></li>
+                    <li id="three"><a href="http://www.mezzoblue.com/zengarden/faq/" target="_blank">FAQ</a></li>
+                    <li id="four"><a href="http://www.mezzoblue.com/zengarden/submit/" target="_blank">SUBMIT A DESIGN</a></li>
+                    <li id="five"><a href="http://www.mezzoblue.com/zengarden/translations/" target="_blank">TRANSLATIONS</a></li>
+                </ul>
             </div>
                 <div class="requirements">
                     <h3>Requirements</h3>
-                    <p>Where possible, we would like to see mostly CSS 1 & 2 usage. CSS 3 & 4 should be limited to widely-supported elements only, or strong fallbacks should be provided. The CSS Zen Garden is about functional, practical CSS and not the latest bleeding-edge tricks viewable by 2% of the browsing public. The only real requirement we have is that your CSS validates.</p>
-                    <p>Luckily, designing this way shows how well various browsers have implemented CSS by now. When sticking to the guidelines you should see fairly consistent results across most modern browsers. Due to the sheer number of user agents on the web these days — especially when you factor in mobile — pixel-perfect layouts may not be possible across every platform. That’s okay, but do test in as many as you can. Your design should work in at least IE9+ and the latest Chrome, Firefox, iOS and Android browsers (run by over 90% of the population).</p>
-                    <p>We ask that you submit original artwork. Please respect copyright laws. Please keep objectionable material to a minimum, and try to incorporate unique and interesting visual themes to your work. We’re well past the point of needing another garden-related design.</p>
+                    <p>Where possible, we would like to see mostly CSS 1 & 2 usage. CSS 3 & 4 should be limited to widely-supported elements only, or strong fallbacks should be provided. The CSS Zen Garden is about functional, practical CSS and not the latest bleeding-edge tricks viewable by 2% of the browsing public. The only real requirement we have is that your CSS validates.</p><br>
+                    <p>Luckily, designing this way shows how well various browsers have implemented CSS by now. When sticking to the guidelines you should see fairly consistent results across most modern browsers. Due to the sheer number of user agents on the web these days — especially when you factor in mobile — pixel-perfect layouts may not be possible across every platform. That’s okay, but do test in as many as you can. Your design should work in at least IE9+ and the latest Chrome, Firefox, iOS and Android browsers (run by over 90% of the population).</p><br>
+                    <p>We ask that you submit original artwork. Please respect copyright laws. Please keep objectionable material to a minimum, and try to incorporate unique and interesting visual themes to your work. We’re well past the point of needing another garden-related design.</p><br>
                     <p>This is a learning exercise as well as a demonstration. You retain full copyright on your graphics (with limited exceptions, see submission guidelines), but we ask you release your CSS under a Creative Commons license identical to the one on this site so that others may learn from your work.</p>
                 </div>
                 <div class="blank">
@@ -57,7 +80,7 @@
                 <p><i>By</i> <a href="http://www.mezzoblue.com/" target="_blank">Dave Shea</a>. <i>Bandwidth graciously donated by</i> mediatemple. <br><i>Now available:</i> <a href="https://www.amazon.com/exec/obidos/ASIN/0321303474/mezzoblue-20/" target="_blank">Zen Garden, the book.</a></p>                    
             </div>
             <div class="footer">
-                <a href="http://validator.w3.org/check/referer html">5</a>
+                <<a href="http://validator.w3.org/check/referer html">5</a>
                 <a href="http://jigsaw.w3.org/css-validator/check/referer">3</a>
                 <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/">c</a>
                 <a href="http://mezzoblue.com/zengarden/faq/#aaa">a</a>
