Added Media Queries to CSS Zen Garden

--- a/projects/css-zen-garden/index.html
+++ b/projects/css-zen-garden/index.html
@@ -80,11 +80,11 @@
                 <p><i>By</i> <a href="http://www.mezzoblue.com/" target="_blank">Dave Shea</a>. <i>Bandwidth graciously donated by</i> mediatemple. <br><i>Now available:</i> <a href="https://www.amazon.com/exec/obidos/ASIN/0321303474/mezzoblue-20/" target="_blank">Zen Garden, the book.</a></p>                    
             </div>
             <div class="footer">
-                <<a href="http://validator.w3.org/check/referer html">5</a>
-                <a href="http://jigsaw.w3.org/css-validator/check/referer">3</a>
-                <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/">c</a>
-                <a href="http://mezzoblue.com/zengarden/faq/#aaa">a</a>
-                <a href="https://github.com/mezzoblue/csszengarden.com">g</a>
+                <a href="http://validator.w3.org/check/referer html" class="child html">5</a>
+                <a href="http://jigsaw.w3.org/css-validator/check/referer" class="child css">3</a>
+                <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/" class="child cc">c</a>
+                <a href="http://mezzoblue.com/zengarden/faq/#aaa" class="child a11y">a</a>
+                <a href="https://github.com/mezzoblue/csszengarden.com" class="child gh">g</a>
             </div>
         </div>
         </div>
