Started New Salt-city-7 Site

--- a/projects/new-salt-lake-city/index.html
+++ b/projects/new-salt-lake-city/index.html
@@ -8,9 +8,52 @@
     <title>The Salt Lake City 7</title>
 </head>
 <body>
-    <div class="containter">
-        <div class="header"></div>
-        <div class="main"></div>
+    <div class="container">
+        <div class="header">
+            <nav>
+                <div class="title">
+                    <h1>The Salt Lake City 7</h1>
+                </div>
+                <div class="disk">
+                    <img src="images/diskface.tif" alt="">
+                </div>
+                <div class="navigation">
+                    <ul class="navs">
+                        <li>
+                            <a href="">home</a>
+                        </li>
+                        <li>
+                            <a href="">about us</a>
+                        </li>
+                        <li>
+                            <a href="">music</a>
+                        </li>
+                        <li>
+                            <a href="">video</a>
+                        </li>
+                        <li>
+                            <a href="">contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+            <div class="side">
+                <ul id="side-bar">
+                    <li>
+                        <a href="">Facebook</a>
+                    </li>
+                    <li></li>
+                        <a href="">Instagram</a>
+                    <li>
+                        <a href="">Twitter</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="bgimage"></div>
+        </div>
+        <div class="main">
+            <h2>bios</h2>
+        </div>
         <div class="biographies"></div>
         <div class="audio"></div>
         <div class="video"></div>
