Added media page

--- a/projects/business-site/about.html
+++ b/projects/business-site/about.html
@@ -12,8 +12,8 @@
                 <ul class="nav">
                     <li id="home"><a href="home.html">home</a></li>
                     <li id="about"><a href="about.html">about</a></li>
-                    <li id="media"><a href="media.html">our stories</a></li>
-                    <li id="team"><a href="team.html">our team</a></li>
+                    <li id="media"><a href="media.html">media</a></li>
+                    <li id="team"><a href="team.html">team</a></li>
                     <li id="contact"><a href="contact.html">contact</a></li>
                 </ul>
             </div>
