Completed Media page

--- a/projects/business-site/media.html
+++ b/projects/business-site/media.html
@@ -20,43 +20,78 @@
                 </ul>
             </div>
             <div class="main">
-                <div id="driving">        <img class="pics" src="images/media-portfolio/driving.jpg" alt=""></div>
-                <div id="bike">           <img class="pics" src="images/media-portfolio/bike.jpg" alt=""></div>
-                <div id="boat">           <img class="pics" src="images/media-portfolio/boat.jpg" alt=""></div>
-                <div id="brave">          <img class="pics" src="images/media-portfolio/brave.jpg" alt=""></div>
-                <div id="car">            <img class="pics" src="images/media-portfolio/car.jpg" alt=""></div>
-                <div id="concert">        <img class="pics" src="images/media-portfolio/concert.jpg" alt=""></div>
-                <div id="above">          <img class="pics" src="images/media-portfolio/above.jpg" alt=""></div>
-                <div id="drummer">        <img class="pics" src="images/media-portfolio/drummer.jpg" alt=""></div>
-                <div id="eating-beard">   <img class="pics" src="images/media-portfolio/eating-beard.jpg" alt=""></div>
-                <div id="fishing">        <img class="pics" src="images/media-portfolio/fishing.jpg" alt=""></div>
-                <div id="fashion">        <img class="pics" src="images/media-portfolio/fashion.jpg" alt=""></div>
-                <div id="ferris-wheel">   <img class="pics" src="images/media-portfolio/ferris-wheel.jpg" alt=""></div>
-                <div id="work-weld">      <img class="pics" src="images/media-portfolio/work-weld.jpg" alt=""></div>
-                <div id="fish">           <img class="pics" src="images/media-portfolio/fish.jpg" alt=""></div>
-                <div id="eating">         <img class="pics" src="images/media-portfolio/eating.jpg" alt=""></div>
-                <div id="friends-walking"><img class="pics" src="images/media-portfolio/friends-walking.jpg" alt=""></div>
-                <div id="gym">            <img class="pics" src="images/media-portfolio/gym.jpg" alt=""></div>
-                <div id="mirror">         <img class="pics" src="images/media-portfolio/mirror.jpg" alt=""></div>
-                <div id="night">          <img class="pics" src="images/media-portfolio/night.jpg" alt=""></div>
-                <div id="phone-call">     <img class="pics" src="images/media-portfolio/phone-call.jpg" alt=""></div>
-                <div id="piano">          <img class="pics" src="images/media-portfolio/piano.jpg" alt=""></div>
-                <div id="reeds">          <img class="pics" src="images/media-portfolio/reeds.jpg" alt=""></div>
-                <div id="river">          <img class="pics" src="images/media-portfolio/river.jpg" alt=""></div>
-                <div id="ocean">          <img class="pics" src="images/media-portfolio/ocean.jpg" alt=""></div>
-                <div id="sitting">        <img class="pics" src="images/media-portfolio/sitting.jpg" alt=""></div>
-                <div id="running-beach">  <img class="pics" src="images/media-portfolio/running-beach.jpg" alt=""></div>
-                <div id="skateboard">     <img class="pics" src="images/media-portfolio/skateboard.jpg" alt=""></div>
-                <div id="standing">       <img class="pics" src="images/media-portfolio/standing.jpg" alt=""></div>
-                <div id="stretch">        <img class="pics" src="images/media-portfolio/stretch.jpg" alt=""></div>
-                <div id="teach">          <img class="pics" src="images/media-portfolio/teach.jpg" alt=""></div>
-                <div id="push-up">        <img class="pics" src="images/media-portfolio/push-up.jpg" alt=""></div>
-                <div id="texting">        <img class="pics" src="images/media-portfolio/texting.jpg" alt=""></div>
-                <div id="weld">           <img class="pics" src="images/media-portfolio/weld.jpg" alt=""></div>
-                <div id="young">          <img class="pics" src="images/media-portfolio/young.jpg" alt=""></div>
-                <div id="walking">        <img class="pics" src="images/media-portfolio/walking.jpg" alt=""></div>
-                <div id="work">           <img class="pics" src="images/media-portfolio/work.jpg" alt=""></div>
-                <div id="fire">           <img class="pics" src="images/media-portfolio/fire.jpg" alt=""></div>
+                <div>
+                    <img class="pics" src="images/media-portfolio/driving.jpg" alt="">
+                </div>
+                <div>
+                    <img class="pics" src="images/media-portfolio/bike.jpg" alt="">
+                </div>
+                <div>
+                    <img class="pics" src="images/media-portfolio/boat.jpg" alt="">
+                </div>
+                <div>
+                    <img class="pics" src="images/media-portfolio/car.jpg" alt="">
+                </div>
+                <div>
+                    <img class="pics" src="images/media-portfolio/concert.jpg" alt="">
+                </div>
+                <div>
+                    <img class="pics" src="images/media-portfolio/drummer.jpg" alt="">
+                </div>
+                <div>
+                    <img class="pics" src="images/media-portfolio/young.jpg" alt="">
+                </div>
+                <div>
+                    <img class="pics" src="images/media-portfolio/fashion.jpg" alt="">
+                </div>
+                <div>
+                    <img class="pics" src="images/media-portfolio/work-weld.jpg" alt="">
+                </div>
+                <div>
+                    <img class="pics" src="images/media-portfolio/fish.jpg" alt="">
+                </div>
+                <div>
+                    <img class="pics" src="images/media-portfolio/friends-walking.jpg" alt="">
+                </div>
+                <div>
+                    <img class="pics" src="images/media-portfolio/night.jpg" alt="">
+                </div>
+                <div>
+                    <img class="pics" src="images/media-portfolio/piano.jpg" alt="">
+                </div>
+                <div>
+                    <img class="pics" src="images/media-portfolio/river.jpg" alt="">
+                </div>
+                <div>
+                    <img class="pics" src="images/media-portfolio/ocean.jpg" alt="">
+                </div>
+                <div>
+                    <img class="pics" src="images/media-portfolio/sitting.jpg" alt="">
+                </div>
+                <div>
+                    <img class="pics" src="images/media-portfolio/stretch.jpg" alt="">
+                </div>
+                <div>
+                    <img class="pics" src="images/media-portfolio/push-up.jpg" alt="">
+                </div>
+                <div>
+                    <img class="pics" src="images/media-portfolio/eating-beard.jpg" alt="">
+                </div>
+                <div>
+                    <img class="pics" src="images/media-portfolio/work.jpg" alt="">
+                </div>
+                <div>
+                    <img class="pics" src="images/media-portfolio/weld.jpg" alt="">
+                </div>
+                <div>
+                    <img class="pics" src="images/media-portfolio/snow.jpg" alt="">
+                </div>
+                <div>
+                    <img class="pics" src="images/media-portfolio/fire.jpg" alt="">
+                </div>
+                <div>
+                    <img class="pics" src="images/media-portfolio/skyward.jpg" alt="">
+                </div>
             </div>
             <div class="footer">
                 <ul class="foot">
