--- a/projects/business-site/team.html
+++ b/projects/business-site/team.html
@@ -25,7 +25,7 @@
                     <p>I love drinking water and petting various local birds. I own 17 of this shirt. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia ex perspiciatis reprehenderit praesentium commodi maxime quod quo. Enim vitae corporis illo error? Non repudiandae praesentium culpa dolorem facilis perferendis modi.</p>
                 </div>
                 <div class="bios">
-                     <h1>Renee Frost - Client Contact</h1>
+                     <h1>Elsa Frost - Client Contact</h1>
                     <img class="pics" src="images/headshot-2.jpg" alt="">
                     <p>I love drinking water and petting various local birds. I own 17 of this shirt. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia ex perspiciatis reprehenderit praesentium commodi maxime quod quo. Enim vitae corporis illo error? Non repudiandae praesentium culpa dolorem facilis perferendis modi.</p>
                 </div>
@@ -35,7 +35,7 @@
                     <p>I love drinking water and petting various local birds. I own 17 of this shirt. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia ex perspiciatis reprehenderit praesentium commodi maxime quod quo. Enim vitae corporis illo error? Non repudiandae praesentium culpa dolorem facilis perferendis modi.</p>
                 </div>
                 <div class="bios">
-                    <h1>Felicia Days - Social Media</h1>
+                    <h1>Felicia fo Days - Social Media</h1>
                     <img class="pics" src="images/headshot-4.jpg" alt="">
                     <p>I love drinking water and petting various local birds. I own 17 of this shirt. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia ex perspiciatis reprehenderit praesentium commodi maxime quod quo. Enim vitae corporis illo error? Non repudiandae praesentium culpa dolorem facilis perferendis modi.</p>
                 </div>
