--- a/projects/business-site/about.html
+++ b/projects/business-site/about.html
@@ -12,28 +12,28 @@
                 <ul class="nav">
                     <li id="home"><a href="home.html">home</a></li>
                     <li id="about"><a href="about.html">about</a></li>
-                    <li id="media"><a href="media.html">media</a></li>
+                    <li id="media"><a href="media.html">portfolio</a></li>
                     <li id="team"><a href="team.html">team</a></li>
                     <li id="contact"><a href="contact.html">contact</a></li>
                 </ul>
             </div>
             <div class="main">
-                <div class="mission">
+                <div class="mission info">
                     <h1>Mission<img class="check" src="images/checkmark.png" alt=""></h1>
-                    <p>Our goal is to let the future see out life as it is,andnot as we pretend it to be. Our photographers will follow you for a day, picturing and filming your life.</p><br>
-                    <p>Forward photography specializes in capturing your day today life, as it is. No color coordinating, no perfect settingjust you as you are.</p><br>
-                    <p>Our goal is to let the future see out life as it is, andnot as we pretend it to be. Our photographers will follow you for a day, picturing and filming your life.</p>
+                    <p>Our goal is to let the future see our life as it is, and not as we pretend it to be. Our photographers will follow you for a day, picturing and filming your life.</p><br>
+                    <p>Forward photography specializes in capturing your day to day life, as it is. No color coordinating, no perfect setting, just you, your friends, and your family as you are.</p><br>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis autem est totam, mollitia veritatis perspiciatis neque ex dolorum repellat, recusandae.</p>
                    
                 </div>  
-                <div class="expectations">
+                <div class="expectations info">
                     <h1>Expectations<img class="check" src="images/checkmark.png" alt=""></h1>
-                    <p>Our goal is to let the future see out life as it is,andnot as we pretend it to be. Our photographers will follow you for a day, picturing and filming your life.</p><br>
-                    <p>Forward photography specializes in capturing your day today life, as it is. No color coordinating, no perfect settingjust you as you are.</p><br>
-                    <p>Our goal is to let the future see out life as it is, andnot as we pretend it to be. Our photographers will follow you for a day, picturing and filming your life.</p> 
+                    <p>All we expect of you is to go about your normal day. Get dressed (please), eat breakfast, commute to work, hang out at home, go to a cafe, go for a hike. No matter what, we will capture your experiences.</p><br>
+                    <p>From us, you can expect extreme professionalism, in our behavior as well as in our product. We will never use images for marketing, etc. without your permission. </p><br>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita, ab. Doloribus cupiditate culpa qui. Quisquam molestiae alias distinctio consectetur.</p> 
                 </div>
-                <div class="results">
+                <div class="results info">
                     <h1>Results<img class="check" src="images/checkmark.png" alt=""></h1>
-                    <p>Our goal is to let the future see out life as it is,andnot as we pretend it to be. Our photographers will follow you for a day, picturing and filming your life.</p><br>
+                    <p>Results are great and stuff. You'll like the pictures. You'll feel like a pop star. All your friends will think you're a pop star. What more could you want?</p><br>
                     <p>Forward photography specializes in capturing your day today life, as it is. No color coordinating, no perfect settingjust you as you are.</p><br>
                     <p>Our goal is to let the future see out life as it is, andnot as we pretend it to be. Our photographers will follow you for a day, picturing and filming your life.</p>
                 </div>
