--- a/projects/business-site/portfolio.html
+++ b/projects/business-site/portfolio.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Arvo|Vollkorn" rel="stylesheet">    
-    <link rel="stylesheet" href="media.css">
+    <link rel="stylesheet" href="portfolio.css">
     <title>Forward Photos</title>
 </head>
 <body>
@@ -14,7 +14,7 @@
                 <ul class="nav">
                     <li id="home"><a href="home.html">home</a></li>
                     <li id="about"><a href="about.html">about</a></li>
-                    <li id="media"><a href="media.html">media</a></li>
+                    <li id="media"><a href="media.html">portfolio</a></li>
                     <li id="team"><a href="team.html">team</a></li>
                     <li id="contact"><a href="contact.html">contact</a></li>
                 </ul>
