--- a/projects/business-site/team.html
+++ b/projects/business-site/team.html
@@ -13,41 +13,41 @@
                 <ul class="nav">
                     <li id="home"><a href="home.html">home</a></li>
                     <li id="about"><a href="about.html">about</a></li>
-                    <li id="media"><a href="media.html">media</a></li>
+                    <li id="media"><a href="media.html">portfolio</a></li>
                     <li id="team"><a href="team.html">team</a></li>
                     <li id="contact"><a href="contact.html">contact</a></li>
                 </ul>
             </div>
             <div class="main">
                 <div class="bios">
-                    <h1>Cole Porters - Photographer</h1>
+                    <h1>Cole Porters | <span class="title">Photographer</span></h1>
                     <img class="pics" src="images/headshot-1.jpg" alt="">
-                    <p>I love drinking water and petting various local birds. I own 17 of this shirt. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia ex perspiciatis reprehenderit praesentium commodi maxime quod quo. Enim vitae corporis illo error? Non repudiandae praesentium culpa dolorem facilis perferendis modi.</p>
+                    <p>I love drinking sparkling water and petting various local birds. I own 17 of this shirt. Global warming's real y'all, and we're causing it. Google that ish. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia ex perspiciatis reprehenderit praesentium commodi maxime quod quo.</p>
                 </div>
                 <div class="bios">
-                     <h1>Elsa Frost - Client Contact</h1>
+                     <h1>Elsa Frost | <span class="title">Client Contact</span></h1>
                     <img class="pics" src="images/headshot-2.jpg" alt="">
-                    <p>I love drinking water and petting various local birds. I own 17 of this shirt. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia ex perspiciatis reprehenderit praesentium commodi maxime quod quo. Enim vitae corporis illo error? Non repudiandae praesentium culpa dolorem facilis perferendis modi.</p>
+                    <p>Everyone compares me to all of the famous people. That's so extra, like. I can't even. Does anyone know when the fall flavors are coming out at starbucks? I NEED them in my liiiiife. Love, love, LOVE avacado toast. Check out my insta @BasicB.</p>
                 </div>
                 <div class="bios">
-                    <h1>Kenny Marley - Sales</h1>
+                    <h1>Kenny Marley | <span class="title">Sales</span></h1>
                     <img class="pics" src="images/headshot-3.jpg" alt="">
-                    <p>I love drinking water and petting various local birds. I own 17 of this shirt. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia ex perspiciatis reprehenderit praesentium commodi maxime quod quo. Enim vitae corporis illo error? Non repudiandae praesentium culpa dolorem facilis perferendis modi.</p>
+                    <p>Maaaaaannnn ... I could sure use a sprite and some cheetos. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia ex perspiciatis reprehenderit praesentium commodi maxime quod quo. Enim vitae corporis illo error?</p>
                 </div>
                 <div class="bios">
-                    <h1>Felicia fo Days - Social Media</h1>
+                    <h1>Felicia fo Days | <span class="title">Social Media</span></h1>
                     <img class="pics" src="images/headshot-4.jpg" alt="">
-                    <p>I love drinking water and petting various local birds. I own 17 of this shirt. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia ex perspiciatis reprehenderit praesentium commodi maxime quod quo. Enim vitae corporis illo error? Non repudiandae praesentium culpa dolorem facilis perferendis modi.</p>
+                    <p>I'm the only normal person on this team. Also, I'm like SUPER into collecting radio dials. Also an actress. You should check out my show with Nathan Fillioma and Neil Peetrik Hubris. It's called Dr. Terrible's Yodel Along Blog.</p>
                 </div>
                 <div class="bios">
-                    <h1>Pablo Picassi - Painting</h1>
+                    <h1>Pablo Picassi | <span class="title">Painting</span></h1>
                     <img class="pics" src="images/headshot-5.jpg" alt="">
-                    <p>I love drinking water and petting various local birds. I own 17 of this shirt. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia ex perspiciatis reprehenderit praesentium commodi maxime quod quo. Enim vitae corporis illo error? Non repudiandae praesentium culpa dolorem facilis perferendis modi.</p>
+                    <p>These guys legit just pay me to paint in their workspace. Some crap about setting a chill vibe. Total BS, but I still get that monaayyy. Kenny can hook you up with ANYTHING, so that's a plus. Lorem ipsum dolor sit amet consectetur.</p>
                 </div>
                 <div class="bios">
-                    <h1>Harry Pooter - CEO</h1>
+                    <h1>Harry Pooter | <span class="title">CEO</span></h1>
                     <img class="pics" src="images/headshot-6.jpg" alt="">
-                    <p>I love drinking water and petting various local birds. I own 17 of this shirt. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officia ex perspiciatis reprehenderit praesentium commodi maxime quod quo. Enim vitae corporis illo error? Non repudiandae praesentium culpa dolorem facilis perferendis modi.</p>
+                    <p>Bro I just had this idea and hired a bunch of people to do it for me. I like to work at my local coffee shop where I sit with my back to a wall, watch rick and morty, and flirt with the barista. #daddysmoney. I'm 5 foot 11, but on Tinder I'm 6 foot.</p>
                 </div>
             </div>
             <div class="footer">
