--- a/projects/business-site/contact.html
+++ b/projects/business-site/contact.html
@@ -14,7 +14,7 @@
                 <ul class="nav">
                     <li id="home"><a href="home.html">home</a></li>
                     <li id="about"><a href="about.html">about</a></li>
-                    <li id="media"><a href="media.html">portfolio</a></li>
+                    <li id="media"><a href="portfolio.html">portfolio</a></li>
                     <li id="team"><a href="team.html">team</a></li>
                     <li id="contact"><a href="contact.html">contact</a></li>
                 </ul>
